Packed optimized int4